syntax = "proto3";
package spglisoft;

service DataManager {
    rpc GetDeveloper (DeveloperRequest) returns (DeveloperCredentials);
    rpc GetProjectManager (ProjectManagerRequest) returns (ProjectManagerCredentials);
    rpc GetDevsByProjectId (DevsByProjectIdRequest) returns (DevsByProjectIdList);
    rpc GetDevsWithoutProject (NoParams) returns (DevsByProjectIdList);
    rpc DeleteDevFromProject (DeleteDevRequest) returns (RowsAffected);
    rpc AddDevToProject (DevProjIdRequest) returns (RowsAffected);
    rpc AssignActivity (ActDevIdRequest) returns (RowsAffected);
    rpc GetProjectsByManager (ManagerIdRequest) returns (ProjectList);
    rpc GetProjectByDev (DevIdRequest) returns (ProjectInfo);
}

message DeveloperRequest {
    string matricula = 1;
    string contrasena = 2;
}
message DeveloperCredentials {
    int32 id_desarrollador = 1;
    string nombre = 2;
    string apellido_paterno = 3;
    string apellido_materno = 4;
    string matricula = 5;
    optional int32 id_proyecto = 6;
    int32 semestre = 7;
    int32 id_experiencia_educativa = 8;
}

message ProjectManagerRequest {
    string numero_personal = 1;
    string contrasena = 2;
}
message ProjectManagerCredentials {
    int32 id_representante = 1;
    string nombre = 2;
    string apellido_paterno = 3;
    string apellido_materno = 4;
}

message DevsByProjectIdRequest {
    int32 id_proyecto = 1;
}
message DevsByProjectIdList {
    message DevInfo {
        int32 id_desarrollador = 1;
        string nombre = 2;
        string apellido_paterno = 3;
        string apellido_materno = 4;
        string matricula = 5;
        int32 semestre = 6;
    }
    repeated DevInfo devs = 7;
}

message NoParams {

}

message DeleteDevRequest {
    int32 id_desarrollador = 1;
}

message RowsAffected {
    int32 rows_affected = 1;
}

message DevProjIdRequest {
    int32 id_desarrollador = 1;
    int32 id_proyecto = 2;
}

message ActDevIdRequest {
    int32 id_actividad = 1;
    int32 id_desarrollador = 2;
}

message ManagerIdRequest {
    int32 id_representante = 1;
}

message ProjectInfo {
    int32 id_proyecto = 1;
    string nombre_proyecto = 2;
    string descripcion = 3;
    string fecha_inicio = 4;
    string fecha_fin = 5;
    string estado = 6;
    string nombre_representante = 7;
    string apellido_paterno = 8;
    string apellido_materno = 9;
}
message ProjectList {
    repeated ProjectInfo proyectos = 10;
}

message DevIdRequest {
    int32 id_desarrollador = 1;
}